@@ -5,6 +5,9 @@
 -0.069|1.046
 NOTICE:  Invalid band index (must use 1-based). Returning NULL
 |
+(0,0,0,-1,0,0)
+NOTICE:  Band is empty as width and/or height is 0
+(0,0,0,-1,0,0)
 BEGIN
 20|-68.584|-3.429|6.571|-10.000|3.142
 1000|-68.584|-0.069|1.046|-10.000|3.142
