@@ -19,6 +19,7 @@ PostGIS 2.1.0
 
   - #1839, handling of subdatasets in GeoTIFF in raster2pgsql.
   - #1840, fix logic of when to compute # of tiles in raster2pgsql.
+  - #1872, fix ST_ApproxSummarystats to prevent division by zero.
 
 PostGIS 2.0.1
 2012/06/DD
